// The following is copied from https://github.com/onflow/flow/blob/master/protobuf/flow/access/access.proto
syntax = "proto3";

package flow.access;

// AccessAPI is the public-facing API provided by access nodes.
service AccessAPI {
  // Ping is used to check if the access node is alive and healthy.
  rpc Ping(PingRequest) returns (PingResponse);

  // GetTransactionResult gets the result of a transaction.
  rpc GetTransactionResult(GetTransactionRequest) returns (TransactionResultResponse);
}

message PingRequest {}

message PingResponse {}

message GetTransactionRequest {
  bytes id = 1;
}

message TransactionResultResponse {
  TransactionStatus status = 1;
  uint32 status_code = 2;
  string error_message = 3;
  repeated Event events = 4;
  bytes block_id = 5;
  bytes transaction_id = 6;
  bytes collection_id = 7;
  uint64 block_height = 8;
  Metadata metadata = 9;
}

message Event {
string type = 1;
bytes transaction_id = 2;
uint32 transaction_index = 3;
uint32 event_index = 4;
bytes payload = 5;
}

message Metadata {
  bytes latest_finalized_block_id = 1;
  uint64 latest_finalized_height = 2;
  bytes node_id = 3;
}

enum TransactionStatus {
  UNKNOWN = 0;
  PENDING = 1;
  FINALIZED = 2;
  EXECUTED = 3;
  SEALED = 4;
  EXPIRED = 5;
}